Update Spanish copy

--- a/es/index.html
+++ b/es/index.html
@@ -22,7 +22,7 @@
           Hola, soy Ángela <i>🖐</i>
         </h1>
         <p>
-          Trabajo como profesional de la traducción y la comunicación en español, inglés, francés y gallego. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <em>marketing</em> y redes sociales, y más de ocho años de experiencia en el ámbito de las organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor de cambio. Los proyectos creativos son música para mis oídos, por eso disfruto de la transcreación y la traducción literaria. También soy cantante y música, y me gusta manterme activa con una lista variada de aficiones, entre las que se encuentran la lectura, la repostería con masa madre, el punto o la jardinería.
+          Trabajo como profesional de la traducción y la comunicación en español, inglés, francés y gallego. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <em>marketing</em> y redes sociales, y más de ocho años de experiencia en el ámbito de las organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor de cambio. Los proyectos creativos son música para mis oídos, por eso disfruto de la transcreación y la traducción literaria. También soy cantante y música, y me gusta manterme activa con una lista variada de aficiones, entre las que se encuentran la lectura, las elaboraciones con masa madre, la repostería, el punto y la jardinería.
         </p>
         <ul>
           <li><a href="#contacto" title="Ir al formulario de contacto">Contacto</a>
@@ -39,7 +39,7 @@
     <section id="servicios" class="services">
       <h2>
         <a href="#servicios">
-          &nbsp;No soy <em>superwoman</em>, pero sí ofrezco varios <strong>servicios</strong>&nbsp;<i>🙇</i>&nbsp;
+          &nbsp;Estos son mis <strong>servicios</strong> principales&nbsp;<i>🙇</i>&nbsp;
         </a>
       </h2>
       <article>
@@ -50,9 +50,9 @@
           <li tabindex="0" aria-describedby="servicio-copywriting"><em>Copywriting</em></li>
         </ul>
         <ul>
-          <li id="servicio-traduccion">Traduzco textos del inglés, del francés y del gallego al español. Gracias a mi experiencia internacional, puedo traducir hacia el español de España o a un español más "panhispánico" (¡no olvidemos que el español neutro no existe!), y me comprometo a producir textos fiables y con sensibilidad a las diferencias culturales. Aunque puedo abarcar una gran variedad de temáticas, y me encanta trabajar en cosas nuevas, tengo amplia experiencia en áreas como la nutrición, la medicina del estilo de vida y las dietas vegetales. Mis estándares de calidad son exigentes y me esfuerzo para entregar textos pulidos con gran atención al detalle.</li>
-          <li id="servicio-revision">Cuento con amplia experiencia en revisión y edición de textos, tanto traducidos como originales; una tarea fundamental para conseguir resultados sin errores. Me encargo de buscar posibles fallos de traducción, calcos del idioma de origen, faltas de ortotipografía y problemas de estilo, entre otros, para mejorar la adecuación y la fluidez del contenido. Hasta el traductor o escritor más meticuloso puede cometer errores, por lo que un segundo par de ojos es esencial para obtener un texto de la mejor calidad posible.</li>
-          <li id="servicio-transcreacion">Las campañas de publicidad necesitan algo más que una simple traducción: necesitan a un transcreador. Como tal, mi trabajo es mantener la esencia del material original y adaptar el mensaje para su nuevo público meta, mediante un proceso creativo que requiere de la libertad necesaria para salirte de lo establecido. Se trata de hacer que tu campaña tenga alcance y repercusión.</li>
+          <li id="servicio-traduccion">Traduzco textos del inglés, el francés y el gallego al español. Si bien mi variante nativa es el español de España, gracias a mi trayectoria internacional, he acumulado experiencia en textos dirigidos a un público panhispánico, y desarrollado especial sensibilidad hacia las diferencias culturales. Además de contar con años de experiencia en áreas como la nutrición, la medicina del estilo de vida y las dietas vegetales, estoy preparada para abarcar una gran variedad de temáticas y me encanta explorar nuevos mundos. Me esfuerzo por realizar un trabajo meticuloso y mantener unos estándares de calidad rigurosos, a fin de entregar textos cuidados e idiomáticos.</li>
+          <li id="servicio-revision">Para obtener un texto de la mayor calidad posible, fluido y libre de ambigüedades, es fundamental incorporar una fase de revisión y corrección. Cuento con amplia experiencia en este ámbito, tanto en material traducido como original. Me encargo de resolver cuestiones de estilo, problemas ortotipográficos, erratas o faltas de ortografía, defectos gramaticales, calcos del idioma de origen y errores de traducción.</li>
+          <li id="servicio-transcreacion">El lanzamiento de una campaña publicitaria en otro idioma requiere de los servicios lingüísticos de un transcreador. Como tal, mi objetivo es preservar la esencia del mensaje original y adaptarlo a través de un proceso creativo, teniendo en cuenta el contexto cultural del nuevo público meta. Mediante la transcreación, tu campaña aspira a lograr mayor alcance y repercusión, y a conectar de forma más significativa con tu audiencia.</li>
           <li id="servicio-copywriting">¿Necesitas a alguien que escriba contenido para tu empresa o campaña? ¡Estás buscando la labor de un <em>copywriter</em>! El contenido de calidad te ayuda a definir y mejorar la imagen de marca y a dar a conocer tu empresa, y es la clave para cautivar a tu audiencia. Puedo crear contenido atractivo para páginas web, redes sociales u otros materiales promocionales, asegurándome de que tu marca tenga una personalidad clara y reconocible.</li>
         </ul>
       </article>
@@ -61,7 +61,7 @@
     <section id="educacion">
       <h2>
         <a href="#educacion">
-          &nbsp;Como seguro que te mueres por saberlo, este es mi <strong>historial educativo</strong>&nbsp;<i>🎓</i>&nbsp;
+          &nbsp;Aquí puedes ver mi <strong>historial educativo</strong>&nbsp;<i>🎓</i>&nbsp;
         </a>
       </h2>
       <ol class="timeline">
@@ -86,7 +86,7 @@
     <section id="cursos">
       <h2>
         <a href="#cursos">
-          &nbsp;No pienso dejar de formarme, así que he ido haciendo estos <strong>cursos</strong>&nbsp;<i>📚</i>&nbsp;
+          &nbsp;Para seguir aprendiendo, he ido haciendo estos <strong>cursos</strong>&nbsp;<i>📚</i>&nbsp;
         </a>
       </h2>
       <ol class="timeline">
@@ -116,7 +116,7 @@
     <section id="experiencia">
       <h2>
         <a href="#experiencia">
-          &nbsp;Esto se ha estado cociendo en mi <strong>experiencia profesional</strong> estos años&nbsp;<i>👵</i>&nbsp;
+          &nbsp;Esta es la <strong>experiencia profesional</strong> que he acumulado&nbsp;<i>👵</i>&nbsp;
         </a>
       </h2>
       <ol class="timeline">
@@ -159,7 +159,7 @@
     <section id="herramientas" class="tools">
       <h2>
         <a href="#herramientas">
-          &nbsp;Estas son algunas de las <strong>herramientas</strong> que he usado para mi trabajo&nbsp;<i>🛠</i>&nbsp;
+          &nbsp;Tengo práctica con <strong>herramientas</strong> como estas&nbsp;<i>🛠</i>&nbsp;
         </a>
       </h2>
       <ul>
