--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <section id="courses">
       <h2>
         <a href="#courses">
-          &nbsp;And I intend to keep learning, so I’ve also done these <strong>courses</strong>&nbsp;<i>📚</i>&nbsp;
+          &nbsp;I intend to keep learning, so I’ve also done these <strong>courses</strong>&nbsp;<i>📚</i>&nbsp;
         </a>
       </h2>
       <ol class="timeline">
