Update Spanish copy

--- a/es/index.html
+++ b/es/index.html
@@ -53,7 +53,7 @@
           <li id="servicio-traduccion">Traduzco textos del inglés, el francés y el gallego al español. Si bien mi variante nativa es el español de España, gracias a mi trayectoria internacional, he acumulado experiencia en textos dirigidos a un público panhispánico, y desarrollado especial sensibilidad hacia las diferencias culturales. Además de contar con años de experiencia en áreas como la nutrición, la medicina del estilo de vida y las dietas vegetales, estoy preparada para abarcar una gran variedad de temáticas y me encanta explorar nuevos mundos. Me esfuerzo por realizar un trabajo meticuloso y mantener unos estándares de calidad rigurosos, a fin de entregar textos cuidados e idiomáticos.</li>
           <li id="servicio-revision">Para obtener un texto de la mayor calidad posible, fluido y libre de ambigüedades, es fundamental incorporar una fase de revisión y corrección. Cuento con amplia experiencia en este ámbito, tanto en material traducido como original. Me encargo de resolver cuestiones de estilo, problemas ortotipográficos, erratas o faltas de ortografía, defectos gramaticales, calcos del idioma de origen y errores de traducción.</li>
           <li id="servicio-transcreacion">El lanzamiento de una campaña publicitaria en otro idioma requiere de los servicios lingüísticos de un transcreador. Como tal, mi objetivo es preservar la esencia del mensaje original y adaptarlo a través de un proceso creativo, teniendo en cuenta el contexto cultural del nuevo público meta. Mediante la transcreación, tu campaña aspira a lograr mayor alcance y repercusión, y a conectar de forma más significativa con tu audiencia.</li>
-          <li id="servicio-copywriting">¿Necesitas a alguien que escriba contenido para tu empresa o campaña? ¡Estás buscando la labor de un <em>copywriter</em>! El contenido de calidad te ayuda a definir y mejorar la imagen de marca y a dar a conocer tu empresa, y es la clave para cautivar a tu audiencia. Puedo crear contenido atractivo para páginas web, redes sociales u otros materiales promocionales, asegurándome de que tu marca tenga una personalidad clara y reconocible.</li>
+          <li id="servicio-copywriting">¿Necesitas contenido promocional para tu empresa? En mi labor como <em>copywriter</em>, trabajo contigo para definir tu identidad de marca y desarrollar una imagen reconocible y memorable. Desde llamadas a la acción, pasando por páginas web y redes sociales, hasta <em>newsletters</em> y otros materiales publicitarios, existen infinidad de contextos en los que el <em>copy</em> de calidad puede ayudarte a cautivar a tu audiencia.</li>
         </ul>
       </article>
     </section>
@@ -159,7 +159,7 @@
     <section id="herramientas" class="tools">
       <h2>
         <a href="#herramientas">
-          &nbsp;Tengo práctica con <strong>herramientas</strong> como estas&nbsp;<i>🛠</i>&nbsp;
+            &nbsp;Tengo práctica con <strong>herramientas</strong> como estas&nbsp;<i>🛠</i>&nbsp;
         </a>
       </h2>
       <ul>
