Update small English copy detail

--- a/cv-en.html
+++ b/cv-en.html
@@ -102,7 +102,7 @@
               <li>Localization for Dr. Greger’s Daily Dozen, a habit-tracking app for Android and iOS
               <li>Video editing, Spanish voiceovers and Spanish captions
               <li>Subtitling for long-form lectures and other key video material
-              <li>Adapt graphic material to Spanish for use across online platforms
+              <li>Adapting graphic material to Spanish for use across online platforms
               <li>Cross-team project management with Asana
               <li>Selection of Spanish translation volunteers, with direct impact on output quality
               <li>Management of a small team of volunteers for blog post translations
