Small fixes and tweaks to cover letter template

--- a/cover-letter.html
+++ b/cover-letter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AngelaGV_CV_EN</title>
+  <title>AngelaGV_CoverLetter</title>
   <link rel="stylesheet" href="cv.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,12 +41,12 @@
 
     <main>
       <section>
-        <h1>&nbsp;Why you?&nbsp;</h1>
+        <h1>&nbsp;Who am I?&nbsp;</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque auctor pellentesque ligula sit amet facilisis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sagittis erat ac felis cursus volutpat. Aliquam mollis laoreet elit, quis venenatis massa lobortis non. Praesent sit amet felis nec sem dignissim elementum. Sed tortor augue, euismod vitae dui vel, mollis bibendum nisl. Donec odio nisl, faucibus sit amet facilisis vitae, molestie eget nisi. Donec egestas rhoncus semper. Nulla lacinia massa a orci cursus dignissim. Duis cursus eu turpis sit amet rutrum. Praesent sollicitudin enim massa, vel laoreet libero tristique ac.</p>
       </section>
 
       <section>
-        <h1>&nbsp;Who is Ángela?&nbsp;</h1>
+        <h1>&nbsp;Why you?&nbsp;</h1>
         <p>Sed auctor augue nec neque pulvinar fringilla nec nec libero. Duis purus ex, pulvinar a metus id, sodales vulputate felis. Aliquam erat volutpat. Aliquam semper et lorem non rutrum. Donec sit amet enim congue, suscipit arcu et, tempus ipsum. Sed euismod tincidunt massa eget sagittis. Mauris vel placerat ante, non hendrerit justo. Donec ut scelerisque magna, quis auctor arcu. Pellentesque blandit dictum dui, nec feugiat magna euismod blandit. Mauris rhoncus mauris nec justo pulvinar convallis. Suspendisse mattis dui quam, ac lobortis augue maximus et. Ut id imperdiet purus. Maecenas quam purus, iaculis id bibendum in, hendrerit non massa. Nam finibus a justo eget consectetur. Nullam urna odio, consectetur a tincidunt eget, molestie in risus.</p>
       </section>
 
