--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <ul>
             <li>Translation and editing of social media content
             <li>Transcreation and copywriting for promotional and fundraising campaigns
-            <li>Localization of educational resources, including healthy eating guides, infographics and email series
+            <li>Localization of educational resources, including healthy-eating guides, infographics and email series
             <li>Metric analysis to track reach and engagement, helping establish a combined social media presence of&nbsp;225,000+ followers from the ground up
             <li>Social media content scheduling through platforms such as Buffer, TikTok Studio and Later
             <li>Website localization and content management in WordPress
