Fix internal links in Spanish page

--- a/es/index.html
+++ b/es/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Servicios lingüísticos y creativos de Ángela Graña Varela: traducción, corrección, localización, transcreación, marketing, creación de contenido, redes sociales.">
   <title>Ángela G. V. – Comunicación multilingüe</title>
-  <base href="/">
+  <base href="/es">
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">👩🏻‍💻</text></svg>'>
   <link rel="stylesheet" href="main.css">
 
