--- a/cover-letter.html
+++ b/cover-letter.html
@@ -40,19 +40,22 @@
     </header>
 
     <main>
+        <section>
+          <h1>&nbsp;Who am I?&nbsp;</h1>
+          <p>I’m a multilingual language lover turned translator and communicator.</p>
+          <p>I’ve lived in Spain, France, Switzerland and Scotland, and spent the past eight years working remotely for a US non-profit. Thanks to such a multicultural experience, I have become particularly aware of cultural barriers and the importance of attuned messaging. At the workplace, I love making people smile, and being my colleagues’ safe space when they need a listening ear.</p>
+          <p>In my day to day, there’s rarely a dull moment. I enjoy creating things with my own hands, so I knit, crochet, and sew. My fridge safeguards my pride and joy, my sourdough starter, which I bake with weekly. I like being in nature, which motivated me to move to the countryside, where I started a food forest. I’m an avid reader, so you can always find me with a book (or three). Not least of all, what holds the most special place in my heart is music; I sing, play live, and dabble in music production.</p>
+        </section>
+
       <section>
-        <h1>&nbsp;Who am I?&nbsp;</h1>
+        <h1>&nbsp;Why you?&nbsp;</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque auctor pellentesque ligula sit amet facilisis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque sagittis erat ac felis cursus volutpat. Aliquam mollis laoreet elit, quis venenatis massa lobortis non. Praesent sit amet felis nec sem dignissim elementum. Sed tortor augue, euismod vitae dui vel, mollis bibendum nisl. Donec odio nisl, faucibus sit amet facilisis vitae, molestie eget nisi. Donec egestas rhoncus semper. Nulla lacinia massa a orci cursus dignissim. Duis cursus eu turpis sit amet rutrum. Praesent sollicitudin enim massa, vel laoreet libero tristique ac.</p>
       </section>
 
       <section>
-        <h1>&nbsp;Why you?&nbsp;</h1>
-        <p>Sed auctor augue nec neque pulvinar fringilla nec nec libero. Duis purus ex, pulvinar a metus id, sodales vulputate felis. Aliquam erat volutpat. Aliquam semper et lorem non rutrum. Donec sit amet enim congue, suscipit arcu et, tempus ipsum. Sed euismod tincidunt massa eget sagittis. Mauris vel placerat ante, non hendrerit justo. Donec ut scelerisque magna, quis auctor arcu. Pellentesque blandit dictum dui, nec feugiat magna euismod blandit. Mauris rhoncus mauris nec justo pulvinar convallis. Suspendisse mattis dui quam, ac lobortis augue maximus et. Ut id imperdiet purus. Maecenas quam purus, iaculis id bibendum in, hendrerit non massa. Nam finibus a justo eget consectetur. Nullam urna odio, consectetur a tincidunt eget, molestie in risus.</p>
-      </section>
-
-      <section>
         <h1>&nbsp;Why me?&nbsp;</h1>
-        <p>Etiam egestas, enim non blandit pulvinar, nulla metus varius massa, sit amet viverra massa turpis id magna. Nam ullamcorper laoreet erat non mollis. Proin laoreet id quam ac suscipit. Quisque vehicula dui ac cursus pellentesque. In a tincidunt eros. Quisque mattis magna congue nibh faucibus sollicitudin at non quam. Etiam vitae nisi egestas, faucibus arcu vel, consectetur ligula. Sed et sem ullamcorper, mollis velit ac, feugiat elit. Mauris finibus sagittis neque et fringilla. Nullam ullamcorper eget lacus in congue. Cras eu sem ac purus dictum ullamcorper at vel massa. Curabitur accumsan sed nunc at pulvinar.</p>
+        <p>Sed auctor augue nec neque pulvinar fringilla nec nec libero. Duis purus ex, pulvinar a metus id, sodales vulputate felis. Aliquam erat volutpat. Aliquam semper et lorem non rutrum. Donec sit amet enim congue, suscipit arcu et, tempus ipsum. Sed euismod tincidunt massa eget sagittis. Mauris vel placerat ante, non hendrerit justo. Donec ut scelerisque magna, quis auctor arcu. Pellentesque blandit dictum dui, nec feugiat magna euismod blandit. Mauris rhoncus mauris nec justo pulvinar convallis. Suspendisse mattis dui quam, ac lobortis augue maximus et. Ut id imperdiet purus. Maecenas quam purus, iaculis id bibendum in, hendrerit non massa. Nam finibus a justo eget consectetur. Nullam urna odio, consectetur a tincidunt eget, molestie in risus.</p>
+        <p>Yours,</p>
       </section>
     </main>
   </article>
