Improve internal links

--- a/es/index.html
+++ b/es/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Servicios lingüísticos y creativos de Ángela Graña Varela: traducción, corrección, localización, transcreación, marketing, creación de contenido, redes sociales.">
   <title>Ángela G. V. – Comunicación multilingüe</title>
-  <base href="/es">
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">👩🏻‍💻</text></svg>'>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../main.css">
 
 <body>
   <main>
@@ -17,7 +16,7 @@
       </a>
 
       <article>
-        <img src="portrait.webp" alt="Ángela’s picture" width="215" height="215">
+        <img src="../portrait.webp" alt="Ángela’s picture" width="215" height="215">
         <h1>
           Hola, soy Ángela <i>🖐</i>
         </h1>
@@ -26,7 +25,7 @@
         </p>
         <ul>
           <li><a href="#contacto" title="Ir al formulario de contacto">Contacto</a>
-          <li><a href="AngelaGV_CV_ES.pdf" target="_blank"><abbr title="Curriculum vitae">CV</abbr></a>
+          <li><a href="../AngelaGV_CV_ES.pdf" target="_blank"><abbr title="Curriculum vitae">CV</abbr></a>
           <li><a target="_blank" href="https://linkedin.com/in/angelagv">LinkedIn</a>
         </ul>
       </article>
@@ -165,67 +164,67 @@
       <ul>
         <li>
           <a target="_blank" href="https://memoq.com">
-            <img height="23" alt="memoQ’s logo" src="memoq-logo.svg"> memoQ
+            <img height="23" alt="memoQ’s logo" src="../memoq-logo.svg"> memoQ
           </a>
         </li>
         <li>
           <a target="_blank" href="https://trados.com">
-            <img height="23" alt="Trados’ logo" src="trados-logo.svg"> Trados
+            <img height="23" alt="Trados’ logo" src="../trados-logo.svg"> Trados
           </a>
         </li>
         <li>
           <a target="_blank" href="https://asana.com">
-            <img height="23" alt="Asana’s logo" src="asana-logo.svg"> Asana
+            <img height="23" alt="Asana’s logo" src="../asana-logo.svg"> Asana
           </a>
         </li>
         <li>
           <a target="_blank" href="https://wordpress.org">
-            <img height="23" alt="WordPress’s logo" src="wordpress-logo.svg"> WordPress
+            <img height="23" alt="WordPress’s logo" src="../wordpress-logo.svg"> WordPress
           </a>
         </li>
         <li>
           <a target="_blank" href="https://amara.org">
-            <img height="23" alt="Amara Subtitling’s logo" src="amara-logo.svg"> Amara Subtitling
+            <img height="23" alt="Amara Subtitling’s logo" src="../amara-logo.svg"> Amara Subtitling
           </a>
         </li>
         <li>
           <a target="_blank" href="https://subworkshop.sourceforge.net">
-            <img height="23" alt="Subtitle Workshop’s logo" src="subtitle-workshop-logo.png"> Subtitle Workshop
+            <img height="23" alt="Subtitle Workshop’s logo" src="../subtitle-workshop-logo.png"> Subtitle Workshop
           </a>
         </li>
         <li>
           <a target="_blank" href="https://buffer.com">
-            <img height="23" alt="Buffer’s logo" src="buffer-logo.svg"> Buffer
+            <img height="23" alt="Buffer’s logo" src="../buffer-logo.svg"> Buffer
           </a>
         </li>
         <li>
           <a target="_blank" href="https://later.com">
-            <img height="23" alt="Later’s logo" src="later-logo.svg"> Later
+            <img height="23" alt="Later’s logo" src="../later-logo.svg"> Later
           </a>
         </li>
         <li>
           <a target="_blank" href="https://tiktok.com/tiktokstudio">
-            <img height="23" class="rounded" alt="TikTok Studio’s logo" src="tiktok-studio-logo.png"> TikTok Studio
+            <img height="23" class="rounded" alt="TikTok Studio’s logo" src="../tiktok-studio-logo.png"> TikTok Studio
           </a>
         </li>
         <li>
           <a target="_blank" href="https://facebook.com/business/tools/meta-business-suite">
-            <img height="23" class="rounded" alt="Meta Business Suite’s logo" src="meta-business-suite-logo.png"> Meta Business Suite
+            <img height="23" class="rounded" alt="Meta Business Suite’s logo" src="../meta-business-suite-logo.png"> Meta Business Suite
           </a>
         </li>
         <li>
           <a target="_blank" href="https://adobe.com/products/indesign.html">
-            <img height="23" alt="Adobe InDesign’s logo" src="indesign-logo.svg"> InDesign
+            <img height="23" alt="Adobe InDesign’s logo" src="../indesign-logo.svg"> InDesign
           </a>
         </li>
         <li>
           <a target="_blank" href="https://adobe.com/products/photoshop.html">
-            <img height="23" alt="Adobe Photoshop’s logo" src="photoshop-logo.svg"> Photoshop
+            <img height="23" alt="Adobe Photoshop’s logo" src="../photoshop-logo.svg"> Photoshop
           </a>
         </li>
         <li>
           <a target="_blank" href="https://adobe.com/products/premiere.html">
-            <img height="23" alt="Adobe Premiere Pro’s logo" src="adobe-premiere-pro-logo.svg"> Premiere Pro
+            <img height="23" alt="Adobe Premiere Pro’s logo" src="../adobe-premiere-pro-logo.svg"> Premiere Pro
           </a>
         </li>
       </ul>
@@ -254,7 +253,7 @@
     </section>
   </main>
 
-  <script src="main.js"></script>
+  <script src="../main.js"></script>
 
   <!-- Tally form -->
   <script>var d=document,w='https://tally.so/widgets/embed.js',v=function(){'undefined'!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll('iframe[data-tally-src]:not([src])').forEach((function(e){e.src=e.dataset.tallySrc}))};if('undefined'!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement('script');s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
