Fix CV links to website

--- a/cv-es.html
+++ b/cv-es.html
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="mailto:angelagranavarela@gmail.com">Correo electrónico</a>
           <li><a target="_blank" href="https://linkedin.com/in/angelagv">LinkedIn</a>
-          <li><a target="_blank" href="https://angelagv.github.io/?lang=es">Página web</a>
+          <li><a target="_blank" href="https://angelagv.github.io/es">Página web</a>
         </ul>
       </section>
 
