--- a/cv-en.html
+++ b/cv-en.html
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="mailto:angelagranavarela@gmail.com">Email</a>
           <li><a target="_blank" href="https://linkedin.com/in/angelagv">LinkedIn</a>
-          <li><a target="_blank" href="https://angelagv.github.io/?lang=en">Website</a>
+          <li><a target="_blank" href="https://angelagv.github.io">Website</a>
         </ul>
       </section>
 
