--- a/cv-en.html
+++ b/cv-en.html
@@ -37,7 +37,7 @@
         <ul>
           <li>Spanish – Native
           <li>Galician – Native
-          <li>English – Native level
+          <li>English – Near-native
           <li>French – Proficient
         </ul>
       </section>
