Sync webpage and CV copy

--- a/cv-en.html
+++ b/cv-en.html
@@ -79,7 +79,7 @@
     <main>
       <section>
         <h1>&nbsp;About me&nbsp;</h1>
-        <p>I’m a professional translator and communicator working from English, French and Galician into Spanish. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact.</p>
+        <p>I’m a professional translator and communicator working with Spanish, English, French and Galician. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact.</p>
       </section>
 
       <section>
