--- a/cv-es.html
+++ b/cv-es.html
@@ -79,7 +79,7 @@
     <main>
       <section>
         <h1>&nbsp;Sobre mí&nbsp;</h1>
-        <p>Trabajo como traductora profesional del inglés, francés y gallego al español. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <i>marketing</i> y redes sociales, y más de ocho años de experiencia con organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor del cambio.</p>
+        <p>Trabajo como profesional de la traducción y la comunicación en español, inglés, francés y gallego. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <i>marketing</i> y redes sociales, y más de ocho años de experiencia con organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor del cambio.</p>
       </section>
 
       <section>
